improve exceptions handling and swagger annotations
